hellokube-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hellokube-clusterip-service
spec:
  selector:
    app: hellokube-label
  ports:
    - port: 8090
      targetPort: 8090
